Reworked simulation. Multi thread executions. Added sleep syscall.